--- a/index_Triangle.html
+++ b/index_Triangle.html
@@ -16,14 +16,11 @@
       <div class="row">
         <div class="col-4">
           <div id="list-example" class="list-group">
-            <a class="list-group-item list-group-item-action" href="#list-item-1" 
-            id="list-item-1">Triangle</a>
-            <a class="list-group-item list-group-item-action" href="#list-item-2"
-            id="list-item-2">Item 2</a>
-            <a class="list-group-item list-group-item-action" href="#list-item-3"
-            id="list-item-3">Item 3</a>
-            <a class="list-group-item list-group-item-action" href="#list-item-4"
-            id="list-item-4">Item 4</a>
+            <a class="list-group-item list-group-item-action" href="#list-item-1" id="list-item-1">Triangle</a>
+            <a class="list-group-item list-group-item-action" href="#list-item-2" id="list-item-2">Item 2</a>
+            <a class="list-group-item list-group-item-action" href="#list-item-3" id="list-item-3">Average
+              Calculator</a>
+            <a class="list-group-item list-group-item-action" href="#list-item-4" id="list-item-4">Item 4</a>
           </div>
         </div>
       </div>
@@ -32,14 +29,16 @@
     <main class="main_conten">
       <nav class="navbar bg-body-tertiary">
         <form class="container-fluid justify-content-start">
-          <button class="btn btn-outline-success me-2" type="button" 
-          onclick="navbutton(3)" id="navbutton_3">3 row</button>
-          <button class="btn btn-outline-success me-2" type="button"
-          onclick="navbutton(2)" id="navbutton_2">2 row</button>
-          <button class="btn btn-outline-success me-2" type="button"
-          onclick="navbutton(1)" id="navbutton_1">1 row</button>
+          <button class="btn btn-outline-success me-2" type="button" onclick="buttonstyle(3)" id="navbutton_3">3
+            row</button>
+          <button class="btn btn-outline-success me-2" type="button" onclick="buttonstyle(2)" id="navbutton_2">2
+            row</button>
+          <button class="btn btn-outline-success me-2" type="button" onclick="buttonstyle(1)" id="navbutton_1">1
+            row</button>
         </form>
       </nav>
+
+      <!-- ---------------- T------------------ -->
 
       <main class="mainAll_Block_contenT" id="main_triangle">
 
@@ -70,11 +69,11 @@
             <label>result : </label><label id="id_output0" class="result_T">---</label><br>
 
             <p class="btn_Block">
-              <input type="button" id="_button0" value="คํานวณ" 
-              class = "btn_process"onclick="Sin_Cos_Tan(degreeToRadian(0),0)">
+              <input type="button" id="_button0" value="คํานวณ" class="btn_process"
+                onclick="Sin_Cos_Tan(degreeToRadian(0),0)">
               <input type="button" value="Add Node" class="btn_Ad_Re" onclick="add_main_triangle()">
-              <input type="button" value="remove Node" id="S_remove_node0" 
-              class="btn_Ad_Re" onclick="remove_main_triangle(0)">
+              <input type="button" value="remove Node" id="S_remove_node0" class="btn_Ad_Re"
+                onclick="remove_main_triangle(0)">
             </p>
 
           </div>
@@ -94,23 +93,45 @@
 
             <input type="number" id="id_input_IT0" class="input_T"><br>
             <label>result : </label><label id="id_output_IT0" class="result_T">---</label><br>
-          
+
             <p class="btn_Block">
-              <input type="button" id="button_IT0" value="คํานวณ" 
-              class = "btn_process" onclick="InverseTrig(0)">
+              <input type="button" id="button_IT0" value="คํานวณ" class="btn_process" onclick="InverseTrig(0)">
               <input type="button" value="Add Node" class="btn_Ad_Re" onclick="add_main_triangle()">
-              <input type="button" value="remove Node" id="I_remove_node0" 
-              class="btn_Ad_Re" onclick="remove_main_triangle(0)">
+              <input type="button" value="remove Node" id="I_remove_node0" class="btn_Ad_Re"
+                onclick="remove_main_triangle(0)">
             </p>
           </div>
         </div>
       </main>
 
-        <!----------- ดอกเบื้ยทบต้น(compound interest) -------------->
+      <!----------- ดอกเบื้ยทบต้น(compound interest) -------------->
 
-        <main class="main_CI">
+      <main class="mainAll_Block_contenT">
 
-        </main>
+      </main>
+
+      <!-----------------ค่าเฉลี่ย ---------------------------->
+
+      <main class="mainAll_Block_contenT" style="display: none;">
+        <div class="AddNode_AG">
+          <div class="main_block_AG" id="AGblockAG0">
+            <h1>โปรแกรมคำนวณค่าเฉลี่ย</h1>
+            <p>ใส่ตัวเลขบวกโดยคั่นด้วยเครื่องหมายจุลภาค ( , )</p>
+            <input type="text" id="numbers0" placeholder="เช่น 5,8,12,20">
+            <br>
+           
+            <div id="result0">---</div>
+
+            <p class="btn_Block"> 
+              <button onclick="calculateAverage(0)" id="calculateAG0" class="btn_process">คำนวณ</button>
+              <input type="button" value="Add Node" class="btn_Ad_Re" onclick="add_block_conten('AG')">
+              <input type="button" value="remove Node" id="removeAG_node0" class="btn_Ad_Re"
+                onclick="remove_main_AG(0,'AG')">
+            </p>
+          </div>
+        </div>
+
+      </main>
     </main>
   </span>
 
@@ -118,6 +139,12 @@
 
   <script src="/script_Triangle.js"></script>
   <script src="/scriptCSS_Triangle.js"></script>
+
+<!-- ----------------------------------- -->
+
+<!-- -------------------------------- -->
+  <script src="/aaverage/script_Average.js"></script>
+  <script src="/addNodeF.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
