--- a/index_main.html
+++ b/index_main.html
@@ -76,7 +76,7 @@
 
       <main class="mainAll_Block_contenT" id="main_triangle">
 
-        <div class="block_conten_triangle" id="block0">
+        <div class="block_conten_triangle" id="tblock0">
           <select class="form-select form-select-sm" id="select_functionT0" onchange="Show_conten_triangle(0)">
             <option selected>Open this select menu</option>
             <option value="SinCosTan">sin,cos,tan</option>
@@ -157,8 +157,8 @@
             <input class="Ci_input" type="number" id="years" placeholder="กรอกจำนวนปี" required>
 
             <div id="Ci_result"></div>
-
             <button class="Ci_button" type="button" onclick="calculateCompoundInterest()">คำนวณ</button>
+            <button type="button" onclick="de_ci()" class="Ci_button" style="margin-top: 10px;">reset input</button>
           </form>
         </div>
       </main>
